chore: update maze generation

--- a/.env
+++ b/.env
@@ -2,9 +2,8 @@
 PORT=1000
 
 # Database
-POSTGRES_USER=dummy_user
-POSTGRES_PASSWORD=dummy_password
-POSTGRES_DB=dummy_db
-POSTGRES_HOST=localhost
+POSTGRES_USER=judge
+POSTGRES_PASSWORD=pathless
+POSTGRES_DB=pathless_trails
+POSTGRES_HOST=custom-postgres
 POSTGRES_PORT=5432
-
